--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ install:
   - go get -t -v -d ./...
 script:
   - go test -v .
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
 after_success:
+  - bash <(curl -s https://codecov.io/bash)
